feat: add alert component

--- a/src/style/utils/icons.scss
+++ b/src/style/utils/icons.scss
@@ -23,3 +23,15 @@
         background-image: icon-url('file-hover');
     }
 }
+
+.icon-success {
+    background-image: icon-url('alert-success');
+}
+
+.icon-error {
+    background-image: icon-url('alert-error');
+}
+
+.icon-close {
+    background-image: icon-url('x');
+}
