feat: add button component

--- a/src/style/utils/icons.scss
+++ b/src/style/utils/icons.scss
@@ -35,3 +35,11 @@
 .icon-close {
     background-image: icon-url('x');
 }
+
+.icon-arrow-up {
+    background-image: icon-url('arrow-up');
+}
+
+.icon-arrow-right {
+    background-image: icon-url('arrow-right');
+}
