--- a/src/style/components/button.scss
+++ b/src/style/components/button.scss
@@ -1,11 +1,12 @@
 .button {
+  @include text-button; // Пишется сверху
+
   display: inline-flex;
   align-items: center;
   justify-content: center;
   padding: 1.6rem 2.4rem;
   border-radius: 1.6rem;
   transition: all 0.3s ease-out;
-  @include text-button;
 
   &--main {
     padding: 1.6rem 2.4rem;
@@ -38,10 +39,11 @@
     }
 
     .headline__container {
+      @include text-h1;
+
       display: flex;
       align-items: center;
       justify-content: space-between;
-      @include text-h1;
       border: none;
 
       &.button--desctop {
