--- a/src/style/utils/typography.scss
+++ b/src/style/utils/typography.scss
@@ -1,5 +1,20 @@
 @import '../utils/breakpoints.scss';
 
+
+// можем написать миксины для шрифтов
+
+// Например:
+
+//@mixin base {
+//    font-family: var(-main-font);
+//}
+
+// Далее вместо
+// font-family: var(--main-font);
+
+// Используем
+// @include base;
+
 @mixin text-h1 {
     font-family: var(--main-font);
     font-size: 5.6rem;
@@ -90,12 +105,14 @@
     line-height: 2.4rem;
     font-weight: 500;
 
+     // TODO исправить
     @include mobile {
         font-size: 1.4rem;
         line-height: 2.2rem;
     }
 }
 
+// TODO @mixin text
 @mixin text-body {
     font-family: var(--text-font);
     font-size: 1.8rem;
@@ -108,6 +125,8 @@
     }
 }
 
+// TODO @mixin text-bold
+// дальше по аналогии
 @mixin text-body-bold {
     font-family: var(--text-font);
     font-size: 1.8rem;
@@ -120,6 +139,7 @@
     }
 }
 
+// text-sm
 @mixin text-body-small {
     font-family: var(--text-font);
     font-size: 1.4rem;
@@ -132,6 +152,7 @@
     }
 }
 
+// text-sm-bold
 @mixin text-body-small-bold {
     font-family: var(--text-font);
     font-size: 1.4rem;
